header and category-navbar implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-primary">Jt Blog App</h1>
-<p>Eusebio</p>
+<app-header></app-header>
+<app-category-navbar></app-category-navbar>
 
 <router-outlet></router-outlet>
