--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<footer>
+  <div class="continer">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="site-logo">JT-JOVETHTECNOLOGIA</div>
+        <div>
+          <ul class="nav justify-content-center">
+            <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Sobre</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Termos & Condições</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contacto</a></li>
+          </ul>
+        </div>
+
+        <p class="mb-2 mt-2">Copyright &copy; 2022 Blogsite JT</p>
+      </div>
+    </div>
+  </div>
+</footer>
