--- a/src/app/components/subscription-form/subscription-form.component.html
+++ b/src/app/components/subscription-form/subscription-form.component.html
@@ -1,1 +1,22 @@
-<p>subscription-form works!</p>
+<div class="card shadow-effect">
+  <div class="card-body">
+    <div class="text-center mt-3 mb-5">
+      <h3>PARA SUBSCRIÇÃO</h3>
+      <p class="m-auto subs-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates nobis optio magni! Quas deserunt et eaque eos obcaecati doloremque recusandae iure voluptate totam, nostrum illo aliquid repudiandae delectus amet porro?
+      </p>
+
+      <form action="" class="form-inline mb-5 mt-5">
+        <div class="form-group col-md-5">
+          <input type="text" class="form-control shadow-effect" placeholder="Seu Nome">
+        </div>
+        <div class="form-group col-md-5">
+          <input type="email" class="form-control shadow-effect" placeholder="Endereço de Email">
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-info btn-block btn-sub">SUBSCREVE</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
