--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -12,7 +12,7 @@
           </ul>
         </div>
 
-        <p class="mb-2 mt-2">Copyright &copy; 2022 Blogsite JT</p>
+        <p class="mb-2 mt-2">Copyright &copy; {{currentYear}} Blogsite JT</p>
       </div>
     </div>
   </div>
