implemented home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,57 @@
-<p>home works!</p>
+<section class="featured-section">
+  <div class="conatiner-fluid">
+    <div class="row">
+      <div class="col-md-12 text-center mt-5">
+        <h2 class="text-white">Postagem em Destaques</h2>
+        <p class="text-white">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio suscipit dolorem laboriosam, aperiam harum fugiat voluptate! Laudantium, reprehenderit placeat distinctio maxime nam harum inventore sequi voluptatibus ut similique aliquid eum!
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section class="container mt-5">
+  <div class="col-md-12 text-center">
+    <h2>Últimos Posts</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus est cum, a fuga iste in et, vitae corporis eos consequatur odit. Amet dignissimos possimus error illum at eum repellendus suscipit.
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</section>
