--- a/src/app/pages/single-category/single-category.component.html
+++ b/src/app/pages/single-category/single-category.component.html
@@ -1,1 +1,31 @@
-<p>single-category works!</p>
+<div class="bg-theme p-5">
+  <div class="container">
+    <h1 class="text-white">Conhecimento Geral</h1>
+    <p class="text-white">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium illo nam laboriosam veritatis ratione dolor quos distinctio, laborum dolore culpa quas at accusamus aspernatur labore quibusdam maiores corporis officiis excepturi?
+    </p>
+  </div>
+</div>
+
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-md-4 mb-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4  mb-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4  mb-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4  mb-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4  mb-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4  mb-3">
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</div>
