--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,25 @@
-<p>single-post works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="card shadow-effect">
+        <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Celine">
+        <div class="card-body">
+          <small class="bg-light text-danger text-center">Design</small>
+          <small class="bg-light text-sucess text-center ml-2">Apresentado</small>
+          <small class="bg-light text-info text-center ml-2">Visualizações</small>
+          <small class="bg-light text-warning text-center ml-2">Última Actualização - Abril 04, 2023</small>
+
+          <h1 class="mt-3 mb-3">Como Iniciar no BLOG em 2023 Editando Nova Categoria</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis voluptatem, ea ullam quae atque qui placeat corporis veritatis, in, reiciendis odio delectus id. Eveniet praesentium adipisci soluta, perferendis quia iure!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</div>
