implementented comment-form

--- a/src/app/components/subscription-form/subscription-form.component.html
+++ b/src/app/components/subscription-form/subscription-form.component.html
@@ -14,7 +14,7 @@
           <input type="email" class="form-control shadow-effect" placeholder="Endereço de Email">
         </div>
         <div class="col-md-2">
-          <button class="btn btn-info btn-block btn-sub">SUBSCREVE</button>
+          <button class="btn btn-info btn-block btn-theme">SUBSCREVE</button>
         </div>
       </form>
     </div>
