--- a/src/app/components/comment-form/comment-form.component.html
+++ b/src/app/components/comment-form/comment-form.component.html
@@ -1,1 +1,19 @@
-<p>comment-form works!</p>
+<div class="card mt-5 shadow-effect">
+  <div class="card-body">
+    <h4>Deixa um Comentário</h4>
+    <p>Você pode deixar um comentário usando este formulário de comentários</p>
+
+    <form action="">
+      <div class="form-group">
+        <label for="">Nome</label>
+        <input type="text" class="form-control shadow-effect" placeholder="Seu nome">
+      </div>
+
+      <div class="form-group">
+        <label for="">Comentário</label>
+        <textarea class="form-control shadow-effect" id="commet" cols="30" rows="10" placeholder="Escreva seu cometário"></textarea>
+      </div>
+      <button class="btn btn-info btn-theme">Adicionar Comentário</button>
+    </form>
+  </div>
+</div>
