implemented pag about, terms e conditions

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,34 @@
-<p>about-us works!</p>
+<section class="mt-5">
+  <div class="container mt-5 mb-5 p-5 bg-theme">
+    <h1 class="text-white text-center">Sobre nós</h1>
+    <div class="p-5 mt-4 bg-secondary-theme text-theme-prmary">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Quod illum nulla, quisquam officiis minus nemo veniam voluptatem odio quidem.
+         Accusantium dolores laborum totam optio, ex reiciendis esse saepe dolorum consequatur?
+      </p>
+      <div class="text-center">
+        <button class="btn btn-info btn-sm mt-4 btn-theme">Voltar para Início</button>
+      </div>
+    </div>
+  </div>
+</section>
