--- a/src/app/components/comment-list/comment-list.component.html
+++ b/src/app/components/comment-list/comment-list.component.html
@@ -1,1 +1,42 @@
-<p>comment-list works!</p>
+<div class="card mb-5 mt-5 pb-5 shadow-effect">
+  <div class="card-body">
+    <h4 class="mt-3 mb-3">Comentários (15,256)</h4>
+
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">Eusebio Joveth</h6>
+      <small class="text-danger">últimas Actualizações - Abril 05, 2021</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum pariatur quidem sit ex officia architecto consequuntur eaque et! Nulla numquam alias maiores vel. Expedita reprehenderit, quam ex vitae tenetur facere!
+      </div>
+
+      <a href="" class="mt-1">Responder</a>
+      <a href="" class="mt-1 ml-3">Ver Resposta</a>
+      <hr>
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">Eusebio Joveth</h6>
+      <small class="text-danger">últimas Actualizações - Abril 05, 2021</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum pariatur quidem sit ex officia architecto consequuntur eaque et! Nulla numquam alias maiores vel. Expedita reprehenderit, quam ex vitae tenetur facere!
+      </div>
+
+      <a href="" class="mt-1">Responder</a>
+      <a href="" class="mt-1 ml-3">Ver Resposta</a>
+      <hr>
+    </div>
+    <div class="comment-box mt-3">
+      <h6 class="mb-0">Eusebio Joveth</h6>
+      <small class="text-danger">últimas Actualizações - Abril 05, 2021</small>
+
+      <div class="mt-3 mb-3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum pariatur quidem sit ex officia architecto consequuntur eaque et! Nulla numquam alias maiores vel. Expedita reprehenderit, quam ex vitae tenetur facere!
+      </div>
+
+      <a href="" class="mt-1">Responder</a>
+      <a href="" class="mt-1 ml-3">Ver Resposta</a>
+      <hr>
+    </div>
+  </div>
+</div>
