implementando firebase nas páginas

--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,16 +1,16 @@
-<div class="card shadow-effect">
-  <img src="https://images.pexels.com/photos/715821/pexels-photo-715821.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="post-image" class="card-img-top">
+<div class="card shadow-effect" *ngIf="postData">
+  <img class="imgLength" src="{{postData?.postImgPath}}" alt="">
   <div class="card-body">
-    <small class="bg-light text-danger text-center">Design</small>
+    <small class="bg-light text-danger text-center">{{postData?.category.category}}</small>
     <small class="bg-light text-success text-center ml-3">Apresentou</small>
-    <small class="bg-light text-info text-center ml-3">Visualizações</small>
+    <small class="bg-light text-info text-center ml-3">{{postData?.vews}}</small>
 
-    <h5 class="mt-1">COMO INICIAR UM BLOG EM 2023 EDITAR NOVA CATEGORIA</h5>
+    <h5 class="mt-1">{{postData?.title}}</h5>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, reprehenderit accusantium laudantium repudiandae consequatur pariatur incidunt. Asperiores sapiente fugiat facilis, odit velit neque, officiis recusandae nam molestias distinctio, explicabo consequuntur.
+     {{postData?.excerpt}}
     </p>
     <small class="bg-light text-warning text-center ml-3">
-      ÚLTIMA ACTUALIZAÇÃO - ABRIL 05, 2023
+     {{postData?.createdAt.toMillis() | date}}
     </small>
   </div>
 </div>
