--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,19 +10,9 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3">
-        <app-post-card></app-post-card>
+      <div class="col-lg-3" *ngFor="let featuredPost of dataSourcePost">
+        <app-post-card [postData] = "featuredPost"></app-post-card>
       </div>
-      <div class="col-lg-3">
-        <app-post-card></app-post-card>
-      </div>
-      <div class="col-lg-3">
-        <app-post-card></app-post-card>
-      </div>
-      <div class="col-lg-3">
-        <app-post-card></app-post-card>
-      </div>
-
     </div>
   </div>
 </section>
@@ -35,23 +25,8 @@
     </p>
   </div>
   <div class="row">
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
+    <div class="col-md-4 mt-3" *ngFor="let latestPost of latestPostsData">
+      <app-post-card [postData]="latestPost"></app-post-card>
     </div>
   </div>
 </section>
