--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -2,11 +2,8 @@
   <div class="container">
     <div class="collapse navbar-collapse justify-content-center">
 
-      <ul class="navbar-nav">
-        <li class="nav-item ml-3"><a href="" class="nav-link">Design</a></li>
-        <li class="nav-item ml-3"><a href="" class="nav-link">Inspiração</a></li>
-        <li class="nav-item ml-3"><a href="" class="nav-link">Esporte</a></li>
-        <li class="nav-item ml-3"><a href="" class="nav-link">Políticas</a></li>
+      <ul class="navbar-nav" *ngFor="let category of dataSourceCategory">
+        <li class="nav-item ml-3"><a href="" class="nav-link" [routerLink]="['/category',category.category, category.id]">{{category.category}}</a></li>
       </ul>
     </div>
   </div>
