--- a/src/app/pages/single-category/single-category.component.html
+++ b/src/app/pages/single-category/single-category.component.html
@@ -1,6 +1,6 @@
 <div class="bg-theme p-5">
   <div class="container">
-    <h1 class="text-white">Conhecimento Geral</h1>
+    <h1 class="text-white">{{categoryObj?.category}}</h1>
     <p class="text-white">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium illo nam laboriosam veritatis ratione dolor quos distinctio, laborum dolore culpa quas at accusamus aspernatur labore quibusdam maiores corporis officiis excepturi?
     </p>
