--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,16 +1,16 @@
-<div class="card shadow-effect" *ngIf="postData" [routerLink]="['/post', postData.id]">
+<div class="card shadow-effect mb-1" *ngIf="postData" [routerLink]="['/post', postData.id]">
   <img class="imgLength" src="{{postData?.postImgPath}}" alt="">
   <div class="card-body">
     <small class="bg-light text-danger text-center">{{postData?.category.category}}</small>
-    <small class="bg-light text-success text-center ml-3">Apresentou</small>
-    <small class="bg-light text-info text-center ml-3">{{postData?.vews}}</small>
+    <small class="bg-light text-success text-center ml-3" *ngIf="postData?.isFeatured">Apresentou</small>
+    <small class="bg-light text-info text-center ml-3">Views: {{postData?.views}}</small>
 
     <h5 class="mt-1">{{postData?.title}}</h5>
     <p>
      {{postData?.excerpt}}
     </p>
     <small class="bg-light text-warning text-center ml-3">
-     {{postData?.createdAt.toMillis() | date}}
+      Últimas Actualização - {{postData?.createdAt.toMillis() | date}}
     </small>
   </div>
 </div>
