--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-md-9">
       <div class="card shadow-effect">
-        <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Celine">
+        <img src="{{postData?.postImgPath}}" alt="Celine">
         <div class="card-body">
           <small class="bg-light text-danger text-center">{{postData?.category.category}}</small>
-          <small class="bg-light text-sucess text-center ml-2">Apresentado</small>
-          <small class="bg-light text-info text-center ml-2">{{postData?.views}}</small>
-          <small class="bg-light text-warning text-center ml-2">{{postData?.created?.toMillis() | date}}</small>
+          <small class="bg-light text-sucess text-center ml-2" *ngIf="postData?.isFeatured">Apresentado</small>
+          <small class="bg-light text-info text-center ml-2">Visualizações: {{postData?.views}}</small>
+          <small class="bg-light text-warning text-center ml-2">Última Actualização: {{postData?.createdAt?.toMillis() | date}}</small>
 
           <h1 class="mt-3 mb-3">{{postData?.title}}</h1>
           <p [innerHTML]="postData?.content"></p>
@@ -17,9 +17,9 @@
        <app-comment-list></app-comment-list>
     </div>
     <div class="col-md-3">
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
+      <div *ngFor="let similarPost of similarPostArray">
+        <app-post-card [postData]="similarPost"></app-post-card>
+      </div>
     </div>
   </div>
 </div>
