--- a/src/app/components/subscription-form/subscription-form.component.html
+++ b/src/app/components/subscription-form/subscription-form.component.html
@@ -6,15 +6,40 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates nobis optio magni! Quas deserunt et eaque eos obcaecati doloremque recusandae iure voluptate totam, nostrum illo aliquid repudiandae delectus amet porro?
       </p>
 
-      <form action="" class="form-inline mb-5 mt-5">
+      <div class="alert alert-danger mt-3" *ngIf="isEmailError">
+        Este email já está sendo utilizado
+      </div>
+      <div class="alert alert-info mt-3" *ngIf="isSubscriber">
+        obrigado por subscrever o nosso serviço de newsletter. fique atento para postagens de blog impressionantes ...!
+      </div>
+
+      <form class="form-inline mb-5 mt-5" #subForm = ngForm (ngSubmit)="onSubmit(subForm.value)" *ngIf="!isSubscriber">
         <div class="form-group col-md-5">
-          <input type="text" class="form-control shadow-effect" placeholder="Seu Nome">
+          <input type="text" class="form-control" placeholder="Seu Nome"
+          name="name"
+          #Name="ngModel"
+          ngModel
+          required
+          [ngClass]="{'is-invalid': Name.touched && Name.invalid}">
+          <div class="text-danger" *ngIf="Name.touched && Name.invalid">
+            <div *ngIf="Name.errors?.['required']">Nome é obrigatório</div>
+          </div>
         </div>
         <div class="form-group col-md-5">
-          <input type="email" class="form-control shadow-effect" placeholder="Endereço de Email">
+          <input type="email" class="form-control" placeholder="Endereço de Email"
+          name="email"
+          #Email="ngModel"
+          ngModel
+          required
+          email
+          [ngClass]="{'is-invalid': Email.touched && Email.invalid}">
+          <div class="text-danger" *ngIf="Email.touched && Email.invalid">
+            <div *ngIf="Email.errors?.['required']">Email é obrigatório</div>
+            <div *ngIf="Email.errors?.['email']">Por favor entre com um email válido</div>
+          </div>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-info btn-block btn-theme">SUBSCREVE</button>
+          <button class="btn btn-info btn-block btn-theme" [disabled]="subForm.invalid">SUBSCREVE</button>
         </div>
       </form>
     </div>
